# qtree

./: .gitignore  Dockerfile  README.md  jsconfig.json  pyproject.toml  run.py  scratchpad.ipynb
apps/bar/: __init__.py  q_income.html  results.html  trial.html  welcome.html
apps/baz/: __init__.py  q_age.html  q_gender.html  q_income.html  welcome.html
apps/foo/: __init__.py
back/: apps.py  io.py  main.py  models.py  templates.py  types.py
front/assets/: fullscreen.css
front/pages/: code.html  fin.html  index.html  main.html  run.html
front/scripts/: app.js  main.js  socket.js
