[tool.poetry]
name = "qtree"
version = "0.1.0"
description = ""
authors = ["QwiglyDee <qwiglydee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.38.4"
pydantic = "^2.8.2"
jinja2 = "^3.1.4"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
itsdangerous = "^2.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
